--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-logging.level.root = INFO
+# Especifica a que BBDD vamos a atacar
+spring.datasource.url=jdbc:mysql://localhost:3306/db_test
+# Especifica el usuario con el que vamos a acceder a la BBDD
+spring.datasource.username=admin
+# Especifica el password con el que vamos a acceder a la BBDD
+spring.datasource.password=admin
+# Indica el driver que vamos a utilizar para conectarnos a la BBDD
+# en este caso, dicho driver será el que hemos descargado mediante a la
+# dependencia MYSQL que hemos añadido en el pom.xml
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Imprime las querys realizadas desde JDBCTEMPLATE por la consola
+logging.level.org.springframework.jdbc.core.JdbcTemplate=debug
+# Nos permite asegurarnos que siempre incluiremos los errores de servidor
+server.error.include-message=always
